--- a/assignment-10/style.css
+++ b/assignment-10/style.css
@@ -66,7 +66,9 @@ h1 {
     border-color: orange;
     /* Set a unique background color. */
     background: #f1f1f1;
+
 }
+
 
 /* Select ALL paragraph elements. */
 p {
@@ -90,4 +92,26 @@ em {
 
 hr {
   margin: 30px 0;
+}
+.box-2 {
+    background-color: rgba(0, 255, 0, 0.5);
+    position: center;
+    left: 1200px;
+    top: 1400px;
+    width: 100%;
+    height: 3000px;
+}
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
