--- a/assignment-10/style.css
+++ b/assignment-10/style.css
@@ -93,14 +93,6 @@ em {
 hr {
   margin: 30px 0;
 }
-.box-2 {
-    background-color: rgba(0, 255, 0, 0.5);
-    position: center;
-    left: 1200px;
-    top: 1400px;
-    width: 100%;
-    height: 3000px;
-}
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
@@ -114,4 +106,154 @@ hr {
   content: "";
   clear: both;
   display: table;
+}
+
+.box-2 {
+    background-color: rgba(0, 255, 0, 0.5);
+    position: center;
+    left: 1200px;
+    top: 1400px;
+    width: 100%;
+    height: 150px%;
+}
+
+{padding: 10px}
+/* A pseudo "canvas": */
+.canvas {
+  align-content: center;
+   background-color: rgb(176,224,230);
+   border: 5px solid gray;
+   width: 1500px;
+   height: 200px;
+   padding: 30px;
+   position: absolute;
+}
+
+
+/* The entire rainbow: */
+.rainbow {
+   width: 960px;
+   height: 500px;
+   position: absolute;
+   /* If the rainbow is 280px wide and the canvas 300px total, (300-280)/2 = 10px on each side to horizontally center: */
+   left: 10px;
+   /* If the rainbow is 150px tall and the canvas 300px total, (300-150)/2 = 75px from bottom or top to vertically center: */
+   bottom: 75px;
+}
+.curved {
+   border-top-left-radius: 600px;
+   border-top-right-radius: 600px;
+}
+.curved.red {
+   background-color: red;
+   width: 280px;
+   height: 150px;
+   position: absolute;
+   /* Note that this is '0px' from the edge of the "rainbow" parent div, not the "canvas": */
+   left: 0;
+   bottom: 0;
+}
+.curved.orange {
+   background-color: orange;
+   width: 240px;
+   height: 130px;
+   position: absolute;
+   left: 20px;
+   bottom: 0;
+}
+.curved.yellow {
+   background-color: yellow;
+   width: 200px;
+   height: 110px;
+   position: absolute;
+   left: 40px;
+   bottom: 0;
+}
+.curved.green {
+   background-color: green;
+   width: 160px;
+   height: 90px;
+   position: absolute;
+   left: 60px;
+   bottom: 0;
+}
+.curved.blue {
+   background-color: blue;
+   width: 120px;
+   height: 70px;
+   position: absolute;
+   left: 80px;
+   bottom: 0;
+}
+.curved.indigo {
+   background-color: indigo;
+   width: 80px;
+   height: 50px;
+   position: absolute;
+   left: 100px;
+   bottom: 0;
+}
+.curved.violet {
+   background-color: violet;
+   width: 40px;
+   height: 30px;
+   position: absolute;
+   left: 120px;
+   bottom: 0;
+}
+
+
+h2 {
+   text-align: center;
+   color: white;
+   opacity: .8;
+   font-family: monospace;
+   margin: 0;
+
+}
+.yellow h2 {
+   color: gray;
+}
+
+
+.cloud {
+   height: 25px;
+   width: 85px;
+   background-color: white;
+   border: 2px solid #AEAEAE;
+   border-radius: 20px;
+   position: absolute;
+}
+/* All "clouds" will be the same shape and color, as stated above. But they need individual positions: */
+.cloud.one {
+   left: 1px;
+   bottom: 65px;
+}
+.cloud.two {
+   left: 40px;
+   bottom: 47px;
+}
+.cloud.three {
+   left: 110px;
+   bottom: 58px;
+}
+.cloud.four {
+   left: 145px;
+   bottom: 50px;
+}
+.cloud.five {
+   right: 1px;
+   bottom: 60px;
+}
+
+
+.sun {
+   background-color: gold;
+   width: 100px;
+   height: 100px;
+   border: 15px solid rgba(255,255,153,.6);
+   border-radius: 100px;
+   position: absolute;
+   top: 25px;
+   right: 20px;
 }
