--- a/assignment-11/css/style.css
+++ b/assignment-11/css/style.css
@@ -1,9 +1,22 @@
 body{
-{h1, h2 {
-   font-family: sans-serif;
+  font-family: Arial, Verdana, Tahoma;
+}
+/* Select the main container 'div' element */
+.main-container {
+    /* Draw a lime green border 2px thick. */
+    border-style: solid;
+    border-width: 2px;
+    border-color: red;
+    /*Add space between the boarder and its inside elements. */
+    padding: 10px;
+    /* Color the background dark grey. */
+    background: #373E42;
+}
+h1, h2{
+ font-family: sans-serif;
 }
 
 p {
-   font-family: serif;
+ font-family: serif;
 }
 }
