--- a/assignment-11/css/style.css
+++ b/assignment-11/css/style.css
@@ -12,11 +12,14 @@ body{
     /* Color the background dark grey. */
     background: #373E42;
 }
-h1, h2{
+h1, h2, h3{
  font-family: sans-serif;
 }
 
 p {
  font-family: serif;
 }
+}
+#line-sixety {
+  font-weight: bold;
 }
