--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -30,7 +30,7 @@
         margin-bottom: 50px;
         color: white;
         padding: 1em;
-        border: 
+        border: 2px solid #623529;
      }
      .inner-box {
         width: 75%;
