--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -1,4 +1,95 @@
-   .parent-container {
+
+
+     .parent-container {
+        width: 100%;
+        max-width: 1600px;
+        min-width:1200px;
+        height: 350px;
+        background-color: #79AF33;
+        margin-bottom: 50px;
+        color: white;
+        padding: 1em;
+        border: 4px solid #623529;
+        border-radius: 20px;
+
+     }
+     .inner-box {
+        width: 75%;
+        height: 50%;
+        background-color: #1CCDCA;
+        color: #333;
+     }
+     body{
+       font-family: Verdana, Arial, Tahoma;
+       font-size: 12px;
+     }
+     div {
+         border: ;
+         border-top: ;
+         border-right: ;
+         border-bottom: ;
+         border-left: ;
+
+         border-width: ;
+         border-top-width: ;
+         border-right-width: ;
+         border-bottom-width: ;
+         border-left-width: ;
+
+         border-style: ;
+         border-top-style: ;
+         border-right-style: ;
+         border-bottom-style: ;
+         border-left-style: ;
+
+         border-color: ;
+         border-top-color: ;
+         border-right-color: ;
+         border-bottom-color: ;
+         border-left-color: ;
+     }
+     .parent-container-03 {
+   border: 3px solid #333;
+   border-radius: 20px;
+   background-color: gold;
+   width: 80%;
+   padding: .5em;
+   margin: auto;
+}
+body {
+   margin: 0.25em;
+}
+header {
+    background-color: #d0d0d0;
+    font-family: sans-serif;
+    font-size: 12pt;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    padding: 0.25em;
+}
+
+.menu-item {
+    margin: auto;
+    padding: 0.25em;
+    min-width: 75px;
+    font-size: 10pt;
+    color: #fff;
+    background-color: goldenrod;
+    line-height: 2.1em;
+}
+
+.menu-item:hover {
+    background-color: gold;
+    color: #333;
+}
+
+.display-inline {
+    display: inline;
+}
+.display-inline-block {
+    display: inline-block;
+ .parent-container {
         font-size: x-large;
         font-weight: bolder;
         font-style: italic;
@@ -19,26 +110,4 @@
      }
      .overflow-scroll {
         overflow: scroll;
-     }
-
-     .parent-container {
-        width: 100%;
-        max-width: 1600px;
-        min-width:1200px;
-        height: 350px;
-        background-color: #79AF33;
-        margin-bottom: 50px;
-        color: white;
-        padding: 1em;
-        border: 2px solid #623529;
-     }
-     .inner-box {
-        width: 75%;
-        height: 50%;
-        background-color: #1CCDCA;
-        color: #333;
-     }
-     body{
-       font-family: Verdana, Arial, Tahoma;
-       font-size: 12px;
      }
