--- a/assignment-12/css/style-backup.css
+++ b/assignment-12/css/style-backup.css
@@ -1,15 +1,18 @@
   .parent-container {
         width: 100%;
+        max-width: 1600px;
+        min-width:1200px;
+        height: 350px;
         background-color: #79AF33;
         margin-bottom: 50px;
         color: white;
         padding: 1em;
-        border: 4px solid #ff0000;
+        border: 4px solid #623529;
         border-radius: 20px;
 
      }
      .inner-box {
-        width: 100%;
+        width: 75%;
         height: 50%;
         background-color: #1CCDCA;
         color: #333;
@@ -51,21 +54,15 @@
    padding: .5em;
    margin: auto;
 }
-body {
-   margin: 0.25em;
-}
+
 header {
     background-color: #d0d0d0;
     font-family: sans-serif;
     font-size: 12pt;
     text-align: center;
     text-transform: uppercase;
-    margin-top: : 0px;
-    padding: 2em;
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    left: 0px;
+    margin-bottom: 20px;
+    padding: 0.25em;
 }
 
 .menu-item {
@@ -88,6 +85,7 @@ header {
 }
 .display-inline-block {
     display: inline-block;
+  }
  .parent-container {
         font-size: x-large;
         font-weight: bolder;
@@ -103,10 +101,7 @@ header {
         height: 50%;
         background-color: rgba(255,255,255,.5)
      }
-     body{
-       font-family: Verdana, Arial, Tahoma;
-       font-size: 12px;
-     }
+
      .overflow-scroll {
         overflow: scroll;
      }
