--- a/assignment-12/css/style-backup.css
+++ b/assignment-12/css/style-backup.css
@@ -1,8 +1,8 @@
   .parent-container {
         width: 100%;
-        max-width: 1600px;
-        min-width:1200px;
-        height: 350px;
+        max-width: 100%;
+        min-width:100%;
+        height: 200px;
         background-color: #79AF33;
         margin-bottom: 50px;
         color: white;
@@ -21,31 +21,7 @@
        font-family: Verdana, Arial, Tahoma;
        font-size: 12px;
      }
-     div {
-         border: ;
-         border-top: ;
-         border-right: ;
-         border-bottom: ;
-         border-left: ;
 
-         border-width: ;
-         border-top-width: ;
-         border-right-width: ;
-         border-bottom-width: ;
-         border-left-width: ;
-
-         border-style: ;
-         border-top-style: ;
-         border-right-style: ;
-         border-bottom-style: ;
-         border-left-style: ;
-
-         border-color: ;
-         border-top-color: ;
-         border-right-color: ;
-         border-bottom-color: ;
-         border-left-color: ;
-     }
      .parent-container-03 {
    border: 3px solid #333;
    border-radius: 20px;
