--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -1,9 +1,10 @@
   .parent-container {
         width: 100%;
         background-color: #79AF33;
-        margin-bottom: 50px;
+        margin-top: 50px;
+        margin-left: 0px;
         color: white;
-        padding: 1em;
+        padding: 5em;
         border: 4px solid #ff0000;
         border-radius: 20px;
 
@@ -18,31 +19,7 @@
        font-family: Verdana, Arial, Tahoma;
        font-size: 12px;
      }
-     div {
-         border: ;
-         border-top: ;
-         border-right: ;
-         border-bottom: ;
-         border-left: ;
 
-         border-width: ;
-         border-top-width: ;
-         border-right-width: ;
-         border-bottom-width: ;
-         border-left-width: ;
-
-         border-style: ;
-         border-top-style: ;
-         border-right-style: ;
-         border-bottom-style: ;
-         border-left-style: ;
-
-         border-color: ;
-         border-top-color: ;
-         border-right-color: ;
-         border-bottom-color: ;
-         border-left-color: ;
-     }
      .parent-container-03 {
    border: 3px solid #333;
    border-radius: 20px;
