--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -24,7 +24,7 @@
    border: 3px solid #333;
    border-radius: 20px;
    background-color: gold;
-   width: 80%;
+   width: 50%;
    padding: .5em;
    margin: auto;
 }
@@ -87,3 +87,26 @@ header {
      .overflow-scroll {
         overflow: scroll;
      }
+     .ex1-container {
+    max-width: 600px;
+    border: 1px solid black;
+    padding: 1em;
+    text-align: justify;
+    margin: auto;
+}
+.red-square {
+    width: 10%;
+    height: 8em;
+    margin: 0.25em;
+    background-color: tomato;
+}
+.float .red-square {
+    float: left;
+}
+.float .float-right {
+    float: right;
+}
+body{
+  font-family: Verdana, Arial, Tahoma;
+  font-size: 12px;
+}
