--- a/assignment-14/css/style.css
+++ b/assignment-14/css/style.css
@@ -6,7 +6,7 @@
      padding-bottom: 300px;
  }
  body{
-     background-color: #FFEBEE;
+     background-color: #FFFFFF;
  }
  div{
      text-align: left;
@@ -60,11 +60,6 @@
      width: 100%;
      text-align: center;
  }
-  img {
-    max-width: 100%
-    height:auto;
-
-  }
 
  /* Set the layout of the menu: */
  .menu-item {
@@ -123,70 +118,6 @@
      background-color: #a2a2a2;
  }
 
- .mainimage{
-     float: left;
-     content:url("../images/road1-small.jpg");
-
- }
-
- /* For width 400px and larger: */
- @media only screen and (min-width: 600px) {
-     .mainimage{
-         content:url("../images/road1.jpg");
-     }
- }
-
- .secondimage{
-     float:right;
-     content:url("../images/road2-small.jpg");
- }
-
- /* For width 400px and larger: */
- @media only screen and (min-width: 600px) {
-     .secondimage{
-         float:right;
-         content:url("../images/road2.jpg");
-     }
- }
-
- .thirdimage{
-     margin: auto;
-     content:url("../images/road3-small.jpg");
- }
-
- /* For width 400px and larger: */
- @media only screen and (min-width: 600px) {
-     .thirdimage{
-         margin: auto;
-         content:url("../images/road3.jpg");
-     }
- }
-
- .fourthimage{
-     margin:auto;
-     content:url("../images/road4-small.jpg");
- }
-
- /* For width 400px and larger: */
- @media only screen and (min-width: 600px) {
-     .fourthimage{
-         margin: auto;
-         content:url("../images/road4.jpg");
-     }
- }
-
- .fifthimage{
-     margin:auto;
-     content:url("../images/road2-small.jpg");
- }
-
- /* For width 400px and larger: */
- @media only screen and (min-width: 600px) {
-     .fifthimage{
-         margin: auto;
-         content:url("../images/road2.jpg");
-     }
- }
  .col-1 {width: 8.33%;}
  .col-2 {width: 16.66%;}
  .col-3 {width: 25%;}
@@ -233,3 +164,27 @@
    width: 100%;
    height: 100%;
  }
+
+
+footer{
+    display: block;
+    padding:10px;
+    font-size:17px;
+    font-weight:bold;
+    font-family:Arial;
+    letter-spacing:1px
+    position: center
+    color: #26272;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 600px) {
+  .Gallery {
+    flex: 100%;
+    max-width: 100%;
+  }
